Add scaffolding for additional BGP message types

--- a/BMPClient/BMPClient.csproj
+++ b/BMPClient/BMPClient.csproj
@@ -51,17 +51,17 @@
     <Compile Include="BGP\ASPathSegment.cs" />
     <Compile Include="BGP\BGP.cs" />
     <Compile Include="BGP\BGPHeader.cs" />
-    <Compile Include="BGP\BGPKeepAlive.cs" />
+    <Compile Include="BGP\BGPKeepAliveMsg.cs" />
     <Compile Include="BGP\BGPMessage.cs" />
-    <Compile Include="BGP\BGPNotification.cs" />
-    <Compile Include="BGP\BGPOpen.cs" />
+    <Compile Include="BGP\BGPNotificationMsg.cs" />
+    <Compile Include="BGP\BGPOpenMsg.cs" />
     <Compile Include="BGP\IBGPMsgBody.cs" />
     <Compile Include="BGP\ImsgBody.cs" />
     <Compile Include="BGP\OptionalParameter.cs" />
     <Compile Include="BGP\PathAttrAtomicAggregate.cs" />
     <Compile Include="BGP\PathAttribute.cs" />
-    <Compile Include="BGP\BGPRouteRefresh.cs" />
-    <Compile Include="BGP\BGPUpdate.cs" />
+    <Compile Include="BGP\BGPRouteMsg.cs" />
+    <Compile Include="BGP\BGPUpdateMsg.cs" />
     <Compile Include="BGP\CapabilityAddPath.cs" />
     <Compile Include="BGP\CapabilityCiscoRouteRefresh.cs" />
     <Compile Include="BGP\CapabilityEnhancedRouteRefresh.cs" />
