Separate console and library code

--- a/BMPClient/BmpListener.csproj
+++ b/BMPClient/BmpListener.csproj
@@ -48,53 +48,54 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BGP\ASPathSegment.cs" />
-    <Compile Include="BGP\BGP.cs" />
-    <Compile Include="BGP\BGPHeader.cs" />
-    <Compile Include="BGP\BGPKeepAliveMsg.cs" />
-    <Compile Include="BGP\BGPMsg.cs" />
-    <Compile Include="BGP\BGPNotificationMsg.cs" />
-    <Compile Include="BGP\BGPOpenMsg.cs" />
-    <Compile Include="BGP\IBGPMsgBody.cs" />
-    <Compile Include="BGP\ImsgBody.cs" />
-    <Compile Include="BGP\OptionalParameter.cs" />
-    <Compile Include="BGP\PathAttrAtomicAggregate.cs" />
-    <Compile Include="BGP\PathAttribute.cs" />
-    <Compile Include="BGP\BGPRouteMsg.cs" />
-    <Compile Include="BGP\BGPUpdateMsg.cs" />
-    <Compile Include="BGP\CapabilityAddPath.cs" />
-    <Compile Include="BGP\CapabilityCiscoRouteRefresh.cs" />
-    <Compile Include="BGP\CapabilityEnhancedRouteRefresh.cs" />
-    <Compile Include="BGP\CapabilityFourOctetAsNumber.cs" />
-    <Compile Include="BGP\CapabilityGracefulRestart.cs" />
-    <Compile Include="BGP\CapabilityMultiProtocol.cs" />
-    <Compile Include="BGP\Capability.cs" />
-    <Compile Include="BGP\CapabilityRouteRefresh.cs" />
-    <Compile Include="BGP\IPAddrPrefix.cs" />
-    <Compile Include="BGP\OptionalParameterCapability.cs" />
-    <Compile Include="BGP\PathAttributeAggregator.cs" />
-    <Compile Include="BGP\PathAttributeASPath.cs" />
-    <Compile Include="BGP\PathAttributeLargeCommunities.cs" />
-    <Compile Include="BGP\PathAttributeMPReachNLRI.cs" />
-    <Compile Include="BGP\PathAttributeMPUnreachNLRI.cs" />
-    <Compile Include="BGP\PathAttributeMultiExitDisc.cs" />
-    <Compile Include="BGP\PathAttributeOrigin.cs" />
-    <Compile Include="BGP\PathAttributeUnknown.cs" />
+    <Compile Include="Bgp\ASPathSegment.cs" />
+    <Compile Include="Bgp\Bgp.cs" />
+    <Compile Include="Bgp\BgpHeader.cs" />
+    <Compile Include="Bgp\BgpKeepAliveMessage.cs" />
+    <Compile Include="Bgp\BgpMessage.cs" />
+    <Compile Include="Bgp\BgpNotificationMessage.cs" />
+    <Compile Include="Bgp\BgpOpenMessage.cs" />
+    <Compile Include="Bgp\IBgpMessage.cs" />
+    <Compile Include="Bgp\IMessageBody.cs" />
+    <Compile Include="Bgp\OptionalParameter.cs" />
+    <Compile Include="Bgp\PathAttrAtomicAggregate.cs" />
+    <Compile Include="Bgp\PathAttribute.cs" />
+    <Compile Include="Bgp\BgpRouteMessage.cs" />
+    <Compile Include="Bgp\BgpUpdateMessage.cs" />
+    <Compile Include="Bgp\CapabilityAddPath.cs" />
+    <Compile Include="Bgp\CapabilityCiscoRouteRefresh.cs" />
+    <Compile Include="Bgp\CapabilityEnhancedRouteRefresh.cs" />
+    <Compile Include="Bgp\CapabilityFourOctetAsNumber.cs" />
+    <Compile Include="Bgp\CapabilityGracefulRestart.cs" />
+    <Compile Include="Bgp\CapabilityMultiProtocol.cs" />
+    <Compile Include="Bgp\Capability.cs" />
+    <Compile Include="Bgp\CapabilityRouteRefresh.cs" />
+    <Compile Include="Bgp\IPAddrPrefix.cs" />
+    <Compile Include="Bgp\OptionalParameterCapability.cs" />
+    <Compile Include="Bgp\PathAttributeAggregator.cs" />
+    <Compile Include="Bgp\PathAttributeASPath.cs" />
+    <Compile Include="Bgp\PathAttributeLargeCommunities.cs" />
+    <Compile Include="Bgp\PathAttributeMPReachNLRI.cs" />
+    <Compile Include="Bgp\PathAttributeMPUnreachNLRI.cs" />
+    <Compile Include="Bgp\PathAttributeMultiExitDisc.cs" />
+    <Compile Include="Bgp\PathAttributeOrigin.cs" />
+    <Compile Include="Bgp\PathAttributeUnknown.cs" />
     <Compile Include="BitConverterExtensions.cs" />
-    <Compile Include="BMP\Header.cs" />
-    <Compile Include="BMP\BMPMessage.cs" />
-    <Compile Include="BMP\BMPInitiation.cs" />
-    <Compile Include="BMP\PeerDownNotification.cs" />
-    <Compile Include="BMP\PeerHeader.cs" />
-    <Compile Include="BMP\PeerUpNotification.cs" />
-    <Compile Include="BMP\BMPStatsTLV.cs" />
-    <Compile Include="BMP\IBMPBody.cs" />
-    <Compile Include="BMP\RouteMonitoring.cs" />
-    <Compile Include="BMP\StatisticsReport.cs" />
-    <Compile Include="BMP\BMPTermination.cs" />
-    <Compile Include="BGP\OptionalParameterUnknown.cs" />
-    <Compile Include="JSON\IPAddressConverter.cs" />
-    <Compile Include="JSON\IPPrefixConvert.cs" />
+    <Compile Include="Bmp\Bmp.cs" />
+    <Compile Include="Bmp\BmpHeader.cs" />
+    <Compile Include="Bmp\BmpMessage.cs" />
+    <Compile Include="Bmp\BmpInitiation.cs" />
+    <Compile Include="Bmp\PeerDownNotification.cs" />
+    <Compile Include="Bmp\BmpPeerHeader.cs" />
+    <Compile Include="Bmp\PeerUpNotification.cs" />
+    <Compile Include="Bmp\BMPStatsTLV.cs" />
+    <Compile Include="Bmp\IBMPBody.cs" />
+    <Compile Include="Bmp\RouteMonitoring.cs" />
+    <Compile Include="Bmp\StatisticsReport.cs" />
+    <Compile Include="Bmp\BmpTermination.cs" />
+    <Compile Include="Bgp\OptionalParameterUnknown.cs" />
+    <Compile Include="Json\IPAddressConverter.cs" />
+    <Compile Include="Json\IPPrefixConvert.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BmpListener.cs" />
