--- a/BmpListener.ConsoleExample/BmpListener.ConsoleExample.csproj
+++ b/BmpListener.ConsoleExample/BmpListener.ConsoleExample.csproj
@@ -34,7 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>BmpListener.Program</StartupObject>
+    <StartupObject>BmpListener.ConsoleExample.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
