--- a/BmpListener/BmpListener.nuspec
+++ b/BmpListener/BmpListener.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>BmpListener</id>
-    <version>0.0.2-alpha</version>
+    <version>0.0.3-alpha</version>
     <title>BmpListener</title>
     <authors>Mark Strother</authors>
     <owners>$author$</owners>
@@ -13,6 +13,11 @@
     <releaseNotes></releaseNotes>
     <copyright>Copyright 2017</copyright>
     <tags>BGP BMP</tags>
+    <dependencies>
+      <group>
+        <dependency id="Newtonsoft.Json" version="9.1.0" />
+      </group>
+    </dependencies>
   </metadata>
   <files>
     <file src="bin\Release\BmpListener.dll" target="lib\net461" />
