--- a/BmpListener/BmpListener.csproj
+++ b/BmpListener/BmpListener.csproj
@@ -93,14 +93,16 @@
     <Compile Include="Bmp\RouteMonitoring.cs" />
     <Compile Include="Bmp\StatisticsReport.cs" />
     <Compile Include="Bmp\BmpTermination.cs" />
+    <Compile Include="EnumExtensions.cs" />
+    <Compile Include="Serialization\ConverterContractResolver.cs" />
+    <Compile Include="Serialization\JsonConverters\BgpOpenMessageJsonConverter.cs" />
+    <Compile Include="Serialization\JsonConverters\BgpUpdateConverter.cs" />
+    <Compile Include="Serialization\JsonConverters\BmpPeerHeaderJsonConverter.cs" />
     <Compile Include="Serialization\JsonConverters\IPAddressJsonConverter.cs" />
-    <Compile Include="Serialization\Models\JsonMessageModel.cs" />
+    <Compile Include="Serialization\JsonMessage.cs" />
     <Compile Include="Serialization\BmpSerializer.cs" />
-    <Compile Include="Serialization\Models\BgpUpdateModel.cs" />
-    <Compile Include="Serialization\Models\BmpPeerHeaderModel.cs" />
-    <Compile Include="Serialization\Models\PathAttributeAggregatorModel.cs" />
     <Compile Include="Serialization\JsonConverters\PathAttributeJsonConverter.cs" />
-    <Compile Include="Serialization\JsonConverters\ToStringJsonConverter.cs" />
+    <Compile Include="Serialization\JsonConverters\IPAddrPrefixJsonConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BmpListener.cs" />
   </ItemGroup>
