--- a/BmpListener/BmpListener.csproj
+++ b/BmpListener/BmpListener.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Bgp\AddressFamily.cs" />
     <Compile Include="Bgp\ASPathSegment.cs" />
+    <Compile Include="Bgp\CapabilityCode.cs" />
     <Compile Include="Bgp\PathAttributeType.cs" />
     <Compile Include="Bgp\BgpHeader.cs" />
     <Compile Include="Bgp\BgpKeepAliveMessage.cs" />
