--- a/BmpListener/BmpListener.csproj
+++ b/BmpListener/BmpListener.csproj
@@ -92,7 +92,7 @@
     <Compile Include="Bmp\BmpMessage.cs" />
     <Compile Include="Bmp\BmpInitiation.cs" />
     <Compile Include="Bmp\PeerDownNotification.cs" />
-    <Compile Include="Bmp\BmpPeerHeader.cs" />
+    <Compile Include="Bmp\PerPeerHeader.cs" />
     <Compile Include="Bmp\PeerUpNotification.cs" />
     <Compile Include="Bmp\BMPStatsTLV.cs" />
     <Compile Include="Bmp\RouteMonitoring.cs" />
