--- a/BmpListener/BmpListener.csproj
+++ b/BmpListener/BmpListener.csproj
@@ -56,6 +56,10 @@
     <Compile Include="Bgp\AddressFamily.cs" />
     <Compile Include="Bgp\ASPathSegment.cs" />
     <Compile Include="Bgp\CapabilityCode.cs" />
+    <Compile Include="Bgp\OptionalParameter.cs" />
+    <Compile Include="Bgp\OptionalParameterType.cs" />
+    <Compile Include="Bgp\OptionalParameterUnknown.cs" />
+    <Compile Include="Bgp\OptionParameterCapability.cs" />
     <Compile Include="Bgp\PathAttributeCommunity.cs" />
     <Compile Include="Bgp\PathAttributeNextHop.cs" />
     <Compile Include="Bgp\PathAttributeType.cs" />
