--- a/src/BmpListener/BmpListener.csproj
+++ b/src/BmpListener/BmpListener.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="DotNetty.Codecs" Version="0.4.3" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.1" />
+    <PackageReference Include="System.Reactive" Version="3.1.1" />
   </ItemGroup>
 
 </Project>
