Restructure folder layout for unit test implementation

--- a/examples/BmpListener.ConsoleExample/BmpListener.ConsoleExample.csproj
+++ b/examples/BmpListener.ConsoleExample/BmpListener.ConsoleExample.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BmpListener\BmpListener.csproj" />
+    <ProjectReference Include="..\..\src\BmpListener\BmpListener.csproj" />
   </ItemGroup>
 
 </Project>
