--- a/src/BmpListener/BmpListener.csproj
+++ b/src/BmpListener/BmpListener.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="DotNetty.Codecs" Version="0.4.3" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.1" />
     <PackageReference Include="System.Reactive" Version="3.1.1" />
+    <PackageReference Include="System.ValueTuple" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
