--- a/src/BmpListener/BmpListener.csproj
+++ b/src/BmpListener/BmpListener.csproj
@@ -2,6 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <PackageId>BmpListener</PackageId>
+    <PackageVersion>0.0.4-alpha</PackageVersion>
+    <Authors>Mark Strother</Authors>
+    <Description>BmpListener is a simple C# BGP Monitoring Protocol (BMP) client.</Description>
+    <Copyright>Copyright (c) 2017 Mark Strother</Copyright>
+    <PackageTags>BGP BMP</PackageTags>
+    <PackageLicenseUrl>https://github.com/mstrother/BmpListener/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/mstrother/BmpListener</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
