--- a/src/BmpListener/BmpListener.csproj
+++ b/src/BmpListener/BmpListener.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>netstandard1.3</TargetFramework>
     <PackageId>BmpListener</PackageId>
-    <PackageVersion>0.0.4-alpha</PackageVersion>
+    <PackageVersion>0.0.5-alpha</PackageVersion>
     <Authors>Mark Strother</Authors>
     <Description>BmpListener is a simple C# BGP Monitoring Protocol (BMP) client.</Description>
     <Copyright>Copyright (c) 2017 Mark Strother</Copyright>
